1. Fixed bonus layout on iPhone 2. Increased mobile media query maxwidth to fix landscape mode

--- a/Bets/Content/css/mobile.less
+++ b/Bets/Content/css/mobile.less
@@ -1,7 +1,7 @@
 ﻿@import 'include/settings';
 @import 'include/css3';
 
-@media screen and (max-width:640px) {
+@media screen and (max-width:800px) {
 
     * {
         -webkit-tap-highlight-color:rgba(0,0,0,0); /* prevent tap highlight color / shadow */
@@ -457,12 +457,6 @@
                     float: none;
                     margin-top: 0;
                 }
-
-        #listing-matchesforround .cell-BetAction,
-        #listing-roundmatchesforuser .cell-BetAction,
-        #listing-matchesforcurrentround .cell-BetAction {
-            float: right;
-        }
 
         .cell-BetAction.loading::after {
             top: 15px;
